# ChangeLog for sys-kernel/development-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.58 2003/11/24 20:15:01 brad_mssw Exp $

*development-sources-2.6.0_beta10 (24 Nov 2003)

  24 Nov 2003; Brad House <brad_mssw@gentoo.org>
  development-sources-2.6.0_beta10.ebuild:
  version bump

  02 Nov 2003; Brad House <brad_mssw@gentoo.org>
  development-sources-2.6.0_beta9.ebuild:
  bring development-sources back to vanilla

  26 Oct 2003; Brad House <brad_mssw@gentoo.org>
  development-sources-2.6.0_beta9.ebuild:
  did not build on amd64. Patch to enable building, also promise pdc20378 patch.

  26 Oct 2003; John Mylchreest <johnm@gentoo.org>;
  development-sources-2.6.0_beta9.ebuild:
  adding a local use to prevent the application of genpatches. this may change
  in future

*development-sources-2.6.0_beta9 (26 Oct 2003)

  26 Oct 2003; Jared Hudson <jhhudso@gentoo.org> : Version bump.
	
  24 Oct 2003; Brad House <brad_mssw@gentoo.org>
  development-sources-2.6.0_beta8.ebuild:
  mark as stable on amd64

  24 Oct 2003; John Mylchreest <johnm@gentoo.org>;
  development-sources-2.6.0_beta8.ebuild:
  Fixing broken symlink, making alsa virtual explicit

*development-sources-2.6.0_beta5-r11 (22 Oct 2003)

  22 Oct 2003; John Mylchreest <johnm@gentoo.org>;
  development-sources-2.6.0_beta5-r11.ebuild,
  development-sources-2.6.0_beta5-r14.ebuild,
  development-sources-2.6.0_beta5-r4.ebuild,
  development-sources-2.6.0_beta5-r8.ebuild,
  development-sources-2.6.0_beta5.ebuild,
  development-sources-2.6.0_beta6-r8.ebuild,
  development-sources-2.6.0_beta6.ebuild,
  development-sources-2.6.0_beta7-r5.ebuild,
  development-sources-2.6.0_beta8.ebuild:
  tidy up and ebuild modifications on test8. unmasking to x86

  18 Oct 2003; Brad House <brad_mssw@gentoo.org>
  development-sources-2.6.0_beta8.ebuild: