@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/development-sources
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.58 2003/11/24 20:15:01 brad_mssw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.59 2003/11/27 01:45:53 brad_mssw Exp $
+
+*development-sources-2.6.0_beta11 (26 Nov 2003)
+
+  26 Nov 2003; Brad House <brad_mssw@gentoo.org>
+  development-sources-2.6.0_beta11.ebuild:
+  bump to _beta11
 
 *development-sources-2.6.0_beta10 (24 Nov 2003)
 
